--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
     </header>
-    <section id="services">
+    <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
